--- a/1.5.css
+++ b/1.5.css
@@ -248,7 +248,7 @@ body {
         padding: 10px 20px;
         font-size: 16px;
         color: white;
-        background-color: #007bff; /* Example blue background */
+        background-color: #007bff; 
         border: none;
         border-radius: 4px;
         cursor: pointer;
@@ -256,22 +256,22 @@ body {
     }
     
     #evaluateButton:hover {
-        background-color: #0056b3; /* Darker shade on hover */
+        background-color: #0056b3; 
     }
     
-    /* Feedback paragraph styling */
+
     #feedback7i, #feedback7ii, #feedback7iii {
         font-weight: bold;
     }
 
     button[type="submit"] {
-        padding: 10px 15px; /* Adjust padding for size */
-        font-size: 16px; /* Larger font size for readability */
-        font-weight: bold; /* Bold font for visibility */
-        color: white; /* Text color */
-        background-color: #28a745; /* Green background color */
-        border: none; /* No border */
-        border-radius: 5px; /* Rounded corners */
-        cursor: pointer; /* Cursor changes to pointer to indicate it's clickable */
-        transition: background-color 0.3s, transform 0.2s; /* Smooth transition for hover and click */
+        padding: 10px 15px; 
+        font-size: 16px; 
+        font-weight: bold; /
+        color: white; 
+        background-color: #28a745; 
+        border: none;
+        border-radius: 5px;
+        cursor: pointer; 
+        transition: background-color 0.3s, transform 0.2s; 
     }
